Fix text overflowing out of cards
This should also fix cards not staying centered on some mobile devices.

--- a/docs/css/mainStyle.css
+++ b/docs/css/mainStyle.css
@@ -183,6 +183,7 @@ p.cardtext {
   margin-top: 0.3em;
   margin-left: 1em;
   margin-right: 1em;
+  word-wrap: break-word;
 }
 
 em.code {
